han: mobile topbar spacing fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -441,6 +441,7 @@ p.news-txt-by-dt{
 .mobile-top-bar-content {
     margin-left: 0rem;
     margin-right: 0rem;
+    margin-top: 4.5rem;
 }
 .mobile-card-text {
     margin-top: -.75rem;
